# scrumpler

./: .gitignore  README.md  batch_processor.py  flake.nix  pyproject.toml  requirements.txt  sample_processor.py
scrumpler/: __init__.py  batch.py  processor.py
