[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrumpler"
version = "0.1.0"
description = "Audio sample processor for experimental music production"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.9.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
scrumpler = "scrumpler.processor:main"
scrumpler-batch = "scrumpler.batch:main"

[tool.hatch.build.targets.wheel]
packages = ["scrumpler"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.black]
line-length = 100
target-version = ["py310"]
